# hearthd

./: .git-commit-template  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  config.toml.example  deny.toml  flake.nix  test-ha.toml
.github/: renovate.json
.github/workflows/: ci.yml
crates/hearthd/: Cargo.toml
crates/hearthd/src/: api.rs  config.rs  examples.rs  lib.rs  main.rs  state.rs
crates/hearthd/src/automation/: ast.rs  parser.rs
crates/hearthd/src/automations/: ast.rs  lexer.rs  lowered_pretty_print.rs  mod.rs  parser.rs  pretty_print.rs  schema.rs
crates/hearthd/src/automations/check/: mod.rs  tests.rs
crates/hearthd/src/automations/codegen/: mod.rs  tests.rs
crates/hearthd/src/automations/codegen/snapshots/: hearthd__automations__codegen__tests__codegen_binary_ops.snap  hearthd__automations__codegen__tests__codegen_constant_dedup.snap  hearthd__automations__codegen__tests__codegen_constants.snap  hearthd__automations__codegen__tests__codegen_function_call.snap  hearthd__automations__codegen__tests__codegen_if_else.snap  hearthd__automations__codegen__tests__codegen_list_comprehension.snap  hearthd__automations__codegen__tests__codegen_list_literal.snap  hearthd__automations__codegen__tests__codegen_mutator_filter_exit.snap  hearthd__automations__codegen__tests__codegen_no_filter.snap  hearthd__automations__codegen__tests__codegen_short_circuit_and.snap  hearthd__automations__codegen__tests__codegen_short_circuit_or.snap  hearthd__automations__codegen__tests__codegen_struct_with_spread.snap  hearthd__automations__codegen__tests__codegen_symbol_dedup.snap  hearthd__automations__codegen__tests__codegen_unary_ops.snap  hearthd__automations__codegen__tests__codegen_unit_literals.snap
crates/hearthd/src/automations/desugar/: mod.rs  tests.rs
crates/hearthd/src/automations/lexer/: lexer.rs  mod.rs  tests.rs
crates/hearthd/src/automations/lower/: mod.rs  tests.rs
crates/hearthd/src/automations/lower_bytecode/: mod.rs  tests.rs
crates/hearthd/src/automations/lower_lir/: mod.rs  tests.rs
crates/hearthd/src/automations/parser/: mod.rs  parser.rs  tests.rs
crates/hearthd/src/automations/repr/: bytecode.rs  bytecode_pretty_print.rs  hir.rs  hir_pretty_print.rs  lir.rs  lir_pretty_print.rs  lowered.rs  lowered_pretty_print.rs  mod.rs  pretty_print.rs  typed.rs  typed_pretty_print.rs
crates/hearthd/src/automations/runtime/: mod.rs  value.rs
crates/hearthd/src/automations/runtime/runner/: mod.rs  tests.rs
crates/hearthd/src/automations/runtime/vm/: mod.rs  tests.rs
crates/hearthd/src/config/: config.rs  diagnostics.rs  mod.rs  partial.rs
crates/hearthd/src/engine/: device.rs  engine.rs  entity.rs  event.rs  integration.rs  message.rs  mod.rs  runner.rs  state.rs  weather.rs
crates/hearthd/src/ha/: integration.rs  mod.rs  protocol.rs  registry.rs  runtime.rs  sandbox.rs
crates/hearthd/src/integrations/: mod.rs
crates/hearthd/src/integrations/ha/: mod.rs
crates/hearthd/src/integrations/mqtt/: binary_sensor.rs  client.rs  config.rs  discovery.rs  light.rs  mod.rs  mqtt.rs
crates/hearthd/src/matter/: mod.rs
crates/hearthd/src/snapshots/: doctest_examples_rs__complex_scenario.snap  doctest_examples_rs__complex_scenario.snap.new  doctest_examples_rs__default_location_validation.snap  doctest_examples_rs__field_conflict_different_values.snap  doctest_examples_rs__field_conflict_same_value.snap  doctest_examples_rs__import_conflict.snap  doctest_examples_rs__import_conflict.snap.new  doctest_examples_rs__location_field_conflict.snap  doctest_examples_rs__merge_conflict.snap  doctest_examples_rs__multiple_conflicts.snap  doctest_examples_rs__success_with_warnings.snap  doctest_examples_rs__validation_error_missing_longitude.snap
crates/hearthd/tests/: motion_to_light.rs
crates/hearthd_config/: Cargo.toml  README.md
crates/hearthd_config/src/: diagnostics.rs  finalize.rs  lib.rs  located.rs  mergeable.rs  validate.rs
crates/hearthd_config/tests/: basic_test.rs  cross_module_test.rs  default_values_test.rs  option_fields_test.rs
crates/hearthd_config_derive/: Cargo.toml  README.md
crates/hearthd_config_derive/src/: generate.rs  lib.rs
docs/design/: README.md  automations-language.md
examples/: control-light.sh
examples/automations/: kitchen_motion_off.hda  kitchen_motion_on.hda
nixos/modules/: hearthd.nix
nixos/pkgs/: ha-python-env.nix
python/: requirements.txt  runner.py
python/homeassistant-shim/: README.md  pyproject.toml
python/homeassistant-shim/homeassistant/: __init__.py  config_entries.py  const.py  core.py  exceptions.py
python/homeassistant-shim/homeassistant/components/: __init__.py  met
python/homeassistant-shim/homeassistant/components/weather/: __init__.py
python/homeassistant-shim/homeassistant/helpers/: aiohttp_client.py  device_registry.py  entity_platform.py  entity_registry.py  sun.py  update_coordinator.py
python/homeassistant-shim/homeassistant/util/: dt.py  unit_system.py
