[workspace]
members = [
  "crates/hearthd",
  "crates/hearthd_config",
  "crates/hearthd_config_derive",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"

[workspace.metadata.crane]
name = "hearthd-workspace"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
ariadne = "0.6"
insta = "1.40"
tempfile = "3.14"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
hostname = "0.4"
chumsky = "0.11.2"
strum = { version = "0.26", features = ["derive"] }
