[workspace]
members = [
  "crates/hearthd",
  "crates/hearthd_config",
  "crates/hearthd_config_derive",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"

[workspace.metadata.crane]
name = "hearthd-workspace"

[workspace.dependencies]
anyhow = "1"
ariadne = "0.6"
async-trait = "0.1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
hostname = "0.4"
insta = "1.40"
linkme = "0.3.35"
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.14"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
chumsky = "0.11.2"
strum = { version = "0.26", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
thiserror = "2"
libc = "0.2"
