[package]
name = "hearthd"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ariadne = { workspace = true }
tokio = { workspace = true }
hearthd_config = { path = "../hearthd_config" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hostname = { workspace = true }
chumsky = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
