[package]
name = "hearthd"
version.workspace = true
edition = "2021"
license.workspace = true

[features]
default = ["integration_mqtt", "integration_ha"]
integration_mqtt = ["dep:rumqttc"]
integration_ha = ["dep:libc", "dep:reqwest"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
hearthd_config = { path = "../hearthd_config" }
hostname = { workspace = true }
linkme = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chumsky = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

# Optional integration dependencies
rumqttc = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
