[package]
name = "hearthd"
version.workspace = true
edition = "2021"
license.workspace = true

[features]
default = ["integration_mqtt"]
integration_mqtt = ["dep:rumqttc"]

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
hearthd_config = { path = "../hearthd_config" }
hostname = { workspace = true }
linkme = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ariadne = { workspace = true }
chumsky = { workspace = true }
facet = { workspace = true }
strum = { workspace = true }

# MQTT integration dependencies (optional, enabled by feature)
rumqttc = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
