[package]
name = "hearthd_config"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
hearthd_config_derive = { path = "../hearthd_config_derive" }
serde = { workspace = true }
toml = { workspace = true }
ariadne = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
