[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant-shim"
version = "0.1.0"
description = "Home Assistant compatibility shim for hearthd"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.0",
    "voluptuous>=0.15.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
